Change hero image object-position to top center to prevent top cropping

--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: top center;
     animation: heroZoom 20s infinite alternate linear;
 }
 
